@@ -10,24 +10,37 @@ import javax.crypto.SecretKey;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
-public class MJTSpaceScanner implements SpaceScannerAPI{
+public class MJTSpaceScanner implements SpaceScannerAPI {
+    private final List<Mission> missions;
+    private final List<Rocket> rockets;
+    private final SecretKey secretKey;
+
     public MJTSpaceScanner(Reader missionsReader, Reader rocketsReader, SecretKey secretKey) {
-
+        missions = MissionsLoader.load(missionsReader);
+        rockets = RocketsLoader.load(rocketsReader);
+        this.secretKey = secretKey;
     }
 
     @Override
     public Collection<Mission> getAllMissions() {
-        return List.of();
+        return Collections.unmodifiableList(missions);
     }
 
     @Override
     public Collection<Mission> getAllMissions(MissionStatus missionStatus) {
-        return List.of();
+        if (missionStatus == null) {
+            throw new IllegalArgumentException("Mission status cannot be null!");
+        }
+
+        return missions.stream().filter(mission -> mission.missionStatus() == missionStatus).toList();
     }
 
     @Override
@@ -37,7 +50,16 @@ public class MJTSpaceScanner implements SpaceScannerAPI{
 
     @Override
     public Map<String, Collection<Mission>> getMissionsPerCountry() {
-        return Map.of();
+        return missions.stream().collect(Collectors.groupingBy(mission -> {
+            String location = mission.location();
+            int lastCommaIndex = location.lastIndexOf(',');
+
+            if (lastCommaIndex == -1) {
+                return location.trim();
+            }
+            // Take everything after the last comma and remove spaces
+            return location.substring(lastCommaIndex + 1).trim();
+        }, Collectors.toCollection(ArrayList::new)));
     }
 
     @Override
@@ -57,7 +79,7 @@ public class MJTSpaceScanner implements SpaceScannerAPI{
 
     @Override
     public Collection<Rocket> getAllRockets() {
-        return List.of();
+        return Collections.unmodifiableList(rockets);
     }
 
     @Override
